Enter rooms of odd scales normally

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
 <body>
   <canvas id="canvas" width="1920" height="1080" class="fit-screen"></canvas>
+  <div>
+    <p>WASD to move. Click to place/remove block.</p>
+    <p>M to open map. Click in "top-left of 2x2 area" to place a new 2x2 room.</p>
+    <p>Otherwise click & drag to move map, and scroll to zoom. M to exit map.</p>
+  </div>
 </body>
 
 <script src="./build/index.js" type="module"></script>
